Fix functionality bugs and finalise app logic
Make sure that Backspace and floating point button
work as expected and attend to bugs.
Append keyboard handling logic to address deleting
not only digits but floating points and operators.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,9 @@
+/*TODO:
+Disable "." button for users if deciaml was already put in
+Nicer display for numbers
+Update and arrange buttons
+*/
+
 * {
     font-size: 55px;
 }
